feature: bolt as data copy
