# src/api/router/router.go
@@ -3,10 +3,10 @@ package router
 import (
 	v1 "APS/src/api/v1"
 
+	_ "APS/docs"
 	"github.com/gin-gonic/gin"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
-	_ "APS/docs"
 )
 
 // Load loads the middlewares, routes, handlers.
@@ -25,6 +25,7 @@ func Load(g *gin.Engine, mw ...gin.HandlerFunc) *gin.Engine {
 	{
 		user.GET("", v1.GetUsers)
 		user.POST("/add", v1.AddUser)
+		user.DELETE("/:user_name", v1.DeleteUser)
 	}
 
 	// 公开的一些接口
